Added the feedback journey code

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,6 +2,7 @@ index.main.callout=Bootstrap starter template
 # This is the about section
 navbar.about.text=About
 navbar.home.text=Home
+navbar.contact.text=Contact Us
 # This is the copy section
 copy.h1.text=Who we are
 copy.p.lead=We are a community of DevOps engineers who has the goal of helping organisations deliver business value \
@@ -13,3 +14,11 @@ copy.project.lead.intro=I am an experienced leader in delivering Quality Softwar
   more pre-emptive methodologies such as UP and Waterfall. I have got a long proven track of turning difficult \
   projects  into success stories and in re-gaining business trust in difficult situations.
 copy.viewdetails.button=View details >>
+# The contact form section
+contact.h1.text=We value your feedback
+contact.p.lead=Please let us know what you think
+form.email=Email
+form.firstname=First Name
+form.lastname=Last Name
+contact.feedback.form.text=Your Feedback
+form.submit=Submit
